--- a/TheSocialClub/templates/groups/friend_detailTSC.html
+++ b/TheSocialClub/templates/groups/friend_detailTSC.html
@@ -5,7 +5,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/TheSocialClub.css' %}">
 
-<div class="row w3-card-4 overflow-hidden w-100" style="height: 625px; position: fixed; top:38px; margin:0px;">
+<div class="row w3-card-4 overflow-hidden w-100" style="height: 100%; position: fixed; top:38px; margin:0px;">
     <!------------------------------------------------------------>  
     <div class="col-lg-3 col-md-3 w3-hide-small overflow-hidden h-100" style="background:#2A2F32; border: 1px solid black; padding:0px;margin:0px;">
 
