--- a/TheSocialClub/templates/indexTSC.html
+++ b/TheSocialClub/templates/indexTSC.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 
-<div class="row w-100 border border-dark" style="height: 625px; position: fixed; top:38px; margin:0px;">
+<div class="row w-100 border border-dark" style="height: 100%; position: fixed; top:38px; margin:0px;">
                 
     <div class=" col-lg-3 w3-hide-small w3-hide-medium" style="background-color:#e4f0f6; padding:0px;margin:0px;">
 
